@@ -2505,7 +2505,8 @@ ClusterHandler::mainClusterEvent(int event, Event * e)
     // Process deferred open_local requests
     /////////////////////////////////////////
     if (!on_stolen_thread) {
-      do_open_local_requests();
+      if (do_open_local_requests())
+		thread->signal_hook(thread);
     }
   }
 
